my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EAUNKDIMSIZE/EAUNKDIMSIZE.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAUNKDIMSIZE.dml:7:7: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAUNKDIMSIZE.dml:10:1: error EAUNKDIMSIZE: the size of dimension 0 (with index variable 'i') is never defined
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAUNKDIMSIZE.dml:26:1: error EAUNKDIMSIZE: the size of dimension 1 (with index variable 'j') is never defined
